welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:3: error: Missing closing brace `}' assumed here
def dogHouse () {
^